--- a/aphroditeweb/src/styles.sass
+++ b/aphroditeweb/src/styles.sass
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/bulma/bulma.sass'
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap')
+html,body
+    height: 100%
+    font-family: 'Dancing Script', cursive
+    margin: 0
