--- a/aphroditeweb/src/styles.sass
+++ b/aphroditeweb/src/styles.sass
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap')
+@import  url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap')
+
+$danger: #c83c58
+$warning: #91825e
+$link: #31f0ff
+$link-hover: darken($link,25%)
+@import '../node_modules/bulma/sass/utilities/_all.sass'
+@import "../node_modules/bulma-timeline/src/sass/index.sass"
+
+@import "../node_modules/bulma/bulma.sass"
 html,body
     height: 100%
-    font-family: 'Dancing Script', cursive
-    margin: 0
+    font-family: 'EB Garamond', serif
+    overflow: auto
+
