--- a/aphroditeweb/src/app/home/home.component.sass
+++ b/aphroditeweb/src/app/home/home.component.sass
@@ -1,78 +1,18 @@
-.bgimg 
+.hero 
     background-image: url('../../assets/back1.jpg') 
-    height: 100vh 
-    width: 100% 
-
-.bgimg 
+   
+.hero 
     position: relative 
     background-attachment: fixed 
     background-position: center 
     background-repeat: no-repeat 
     background-size: cover 
-.center-position 
-    position: absolute 
-    left: 0 
-    top: 50% 
-    width: 100% 
-    text-align: center 
-    color: #000 
 .overlay 
-    background: rgba(0, 0, 0, 0.3) 
+    background: rgba(0, 0, 0, 0.4) 
     width: 100% 
     height: 100% 
     position: absolute 
-.nav 
-    width: 100%
-    height: 65px
-    position: fixed
-    line-height: 65px
-    text-align: center
-
-
-.nav div.logo 
-    float: left
-    width: auto
-    height: auto
-    padding-left: 3rem
-
-
-.nav div.logo a 
-    text-decoration: none
-    color: #fff
-    font-size: 2.5rem
-
-
-.nav div.logo a:hover 
-    color: #00E676
-
-
-.nav div.main_list 
-    height: 65px
-    float: right
-
-
-.nav div.main_list ul 
-    width: 100%
-    height: 65px
-    display: flex
-    list-style: none
-    margin: 0
-    padding: 0
-
-
-.nav div.main_list ul li 
-    width: auto
-    height: 65px
-    padding: 0
-    padding-right: 3rem
-
-
-.nav div.main_list ul li a 
-    text-decoration: none
-    color: #fff
-    line-height: 65px
-    font-size: 2.4rem
-
-
-.nav div.main_list ul li a:hover 
-    color: #00E676
+@media screen and (min-width: 769px)
+    .hero.is-large .hero-body 
+        padding-bottom: 14rem
+        padding-top: 14rem
