--- a/aphroditeweb/src/app/aboutus/aboutus.component.html
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.html
@@ -1,37 +1,89 @@
-<section class="hero is-medium">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div class="has-text-centered title is-3">
-        <span class="has-text-danger">About </span>Us
+      <div class="columns is-multiline">
+        <div class="column is-12">
+          <div class="has-text-centered title is-3">
+            <span class="has-text-danger">About </span>Us
+          </div>
+          <br>
+        </div>
+        <div class="column is-12">
+          <nav class="level">
+            <div class="level-item">
+              <div>
+                <p>
+                  <span class="image-container left">
+                    <img
+                      src="../../assets/photos/kostas.jpg"
+                      alt="This zooms-in really well and smooth"
+                    />
+                  </span>
+                </p>
+              </div>
+            </div>
+            <div class="level-item">
+              <div>
+                <div class="has-text-centered title is-5">Κώστας Τσιούρης</div>
+                <div class="has-text-centered subtitle is-6">
+                  Κάποιες από τις σημαντικότερες στιγμες της ζωής του...
+                </div>
+                <hr />
+                <ul>
+                  <li>2005 Σχολή Ικάρων, το όνειρο γίνεται πραγματικότητα</li>
+                  <li>
+                    2009 Η πιο σημαντική στιγμη της ζωής του, η γνωριμία του με
+                    τη Νάνσυ
+                  </li>
+                  <li>2009 Η αποφοιτησή του</li>
+                  <li>
+                    2013 Ήρθε η συγκατοίκηση και μαζί με αυτή το νέο μέλος στην
+                    οικογένεια, η Ρόξυ
+                  </li>
+                  <li>2018 Η πρόταση γάμου είναι γεγονός</li>
+                  <li>2019 10 ΧΡΟΝΙΑ ΜΑΖΙ Ο ΓΑΜΟΣ ΜΑΣ</li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+        <div class="column is-12">
+          <nav class="level">
+            <div class="level-item">
+              <div>
+                <div class="has-text-centered title is-5">Νάνσυ Ντάσιου</div>
+                <div class="has-text-centered subtitle is-6">
+                  Μεγάλωσε στα Ιωάννινα και για κακή της τύχη γνώρισε των κώστα...
+                </div>
+                <hr />
+                <ul>
+                  <li>
+                    2008 Παιδαγωγικό Τμήμα Νηπιαγωγών, η σχολή που αγάπησε
+                  </li>
+                  <li>2009 Η γνωριμία της με τον Κώστα</li>
+                  <li>2012 Η αποφοίτηση είναι γεγονός</li>
+                  <li>
+                    2013 Ήρθε η συγκατοίκηση και μαζί με αυτή το νέο μέλος στην
+                    οικογένεια, η Ρόξυ
+                  </li>
+                  <li>2018 Λέει το μεγάλο ΝΑΙΙΙΙΙ</li>
+                  <li>2019 10 ΧΡΟΝΙΑ ΜΑΖΙ Ο ΓΑΜΟΣ ΜΑΣ</li>
+                </ul>
+              </div>
+            </div>
+            <div class="level-item">
+              <div>
+                <span class="image-container right">
+                  <img
+                    src="../../assets/photos/nansy.jpg"
+                    alt="This zooms-in really well and smooth"
+                  />
+                </span>
+              </div>
+            </div>
+          </nav>
+        </div>
       </div>
-      <nav class="level">
-        <div class="level-item">
-          <div>
-            <p>
-              <span class="image-container left">
-                  <img src="../../assets/photos/SID_2300.jpg" alt="This zooms-in really well and smooth">
-              </span>
-            </p>
-            <p class="has-text-centered subtitle">Κώστας Τσιούρης</p>
-            <p class="has-text-centered">
-              Μέγαλος παγουράς παίζει μόνο Akali
-            </p>
-          </div>
-        </div>
-        <div class="level-item">
-          <div>
-            <p>
-              <span class="image-container right">
-                  <img src="../../assets/photos/SID_2300.jpg" alt="This zooms-in really well and smooth">
-              </span>
-            </p>
-            <p class="has-text-centered subtitle">Νάνσυ Ντάσιου</p>
-            <p class="has-text-centered">
-              Μεγάλωσε στα Ιωάννινα και για κακή της τύχη γνώρισε των κώστα
-            </p>
-          </div>
-        </div>
-      </nav>
     </div>
   </div>
 </section>
