--- a/aphroditeweb/src/app/app.component.html
+++ b/aphroditeweb/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-home></app-home>
+<!-- <app-home></app-home>
 <app-quote></app-quote>
 <app-aboutus></app-aboutus>
-<app-invitation></app-invitation>
+<app-invitation></app-invitation> -->
 <app-location></app-location> 
 <app-theprogramm></app-theprogramm>
