--- a/aphroditeweb/src/app/theprogramm/theprogramm.component.html
+++ b/aphroditeweb/src/app/theprogramm/theprogramm.component.html
@@ -37,6 +37,27 @@
         <div class="timeline-item is-danger">
           <div class="timeline-marker is-danger"></div>
           <div class="timeline-content">
+            <p class="heading">H Νύφη</p>
+            <p>
+              Συγγενείς και φίλοι ευπρόσδεκτοι για να μοιραστούμε την χαρά
+              <a href="{{ nansypath }}" target="_blank">εδώ</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="timeline-item is-danger">
+          <div class="timeline-marker is-danger"></div>
+          <div class="timeline-content">
+            <p class="heading">O Γαμπρός</p>
+            <p>
+              Το εξοχικό του γαμπρού ανοιχτό για όποιον το επιθυμεί
+              <a href="{{ kostaspath }}" target="_blank">εδώ.</a>
+            </p>
+          </div>
+        </div>
+        <div class="timeline-item is-danger">
+          <div class="timeline-marker is-danger"></div>
+          <div class="timeline-content">
             <p class="heading">Ο Γαμος</p>
             <p>
               Το μεγάλο EVENT της ημέρας, και για να μην χαθείτε ορίστε και η
