--- a/aphroditeweb/src/app/aboutus/aboutus.component.sass
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.sass
@@ -5,8 +5,8 @@
    margin: 0 auto
 
 .image-container
-    width: 300px
-    height: 300px
+    width: 400px
+    height: 400px
     overflow: hidden
     display: block
     margin: 0 auto 10px
@@ -18,3 +18,7 @@
     border-bottom-left-radius: 100px  
 .image-container:hover img
     transform: scale(1.5)
+ul
+    list-style-type: disc
+.title:not(.is-spaced) + .subtitle
+    margin-top: 0
