--- a/aphroditeweb/src/app/home/home.component.sass
+++ b/aphroditeweb/src/app/home/home.component.sass
@@ -1,5 +1,5 @@
 .hero 
-    background-image: url('../../assets/back1.jpg') 
+    background-image: url('../../assets/photos/home.jpg') 
    
 .hero 
     position: relative 
@@ -8,7 +8,7 @@
     background-repeat: no-repeat 
     background-size: cover 
 .overlay 
-    background: rgba(0, 0, 0, 0.4) 
+    background: rgba(0, 0, 0, 0.8) 
     width: 100% 
     height: 100% 
     position: absolute 
