--- a/aphroditeweb/src/app/aboutus/aboutus.component.html
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.html
@@ -1,10 +1,10 @@
-<section class="hero is-small">
+<section class="hero is-medium">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-multiline">
         <div class="column is-12">
           <div class="has-text-centered title is-3">
-            <span class="has-text-danger">About </span>Us
+            <span class="has-text-danger">Ποιοι </span>είμαστε
           </div>
           <br>
         </div>
