--- a/aphroditeweb/src/app/aboutus/aboutus.component.sass
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.sass
@@ -22,3 +22,6 @@ ul
     list-style-type: disc
 .title:not(.is-spaced) + .subtitle
     margin-top: 0
+hr 
+    background-color: #5a5a5a57
+    height: 1px
