--- a/aphroditeweb/src/app/theprogramm/theprogramm.component.html
+++ b/aphroditeweb/src/app/theprogramm/theprogramm.component.html
@@ -40,7 +40,7 @@
             <p class="heading">H Νύφη</p>
             <p>
               Συγγενείς και φίλοι ευπρόσδεκτοι για να μοιραστούμε την χαρά
-              <a href="{{ nansypath }}" target="_blank">εδώ</a>
+              <a href="{{ nansyPath }}" target="_blank">εδώ</a>
             </p>
           </div>
         </div>
@@ -51,7 +51,7 @@
             <p class="heading">O Γαμπρός</p>
             <p>
               Το εξοχικό του γαμπρού ανοιχτό για όποιον το επιθυμεί
-              <a href="{{ kostaspath }}" target="_blank">εδώ.</a>
+              <a href="{{ kostasPath }}" target="_blank">εδώ.</a>
             </p>
           </div>
         </div>
