--- a/aphroditeweb/src/app/location/location.component.html
+++ b/aphroditeweb/src/app/location/location.component.html
@@ -1,4 +1,4 @@
-<section class="hero is-small">
+<section class="hero is-medium">
   <div class="hero-body">
     <div class="container">
       <div class="title is-2 is-marginless has-text-centered">
