--- a/aphroditeweb/src/styles.sass
+++ b/aphroditeweb/src/styles.sass
@@ -14,3 +14,9 @@ html,body
     font-family: 'EB Garamond', serif
     overflow: auto
 
+.markerTitle
+    margin-left: -30px
+    margin-top: -75px!important
+    color: black
+    font-weight: 800
+    font-size: 20px
