--- a/aphroditeweb/src/app/location/location.component.html
+++ b/aphroditeweb/src/app/location/location.component.html
@@ -2,10 +2,10 @@
   <div class="hero-body">
     <div class="container">
       <div class="title is-2 is-marginless has-text-centered">
-        Το <span class="has-text-danger">Εκκλησάκι</span>
+       Η   <span class="has-text-danger">εκκλησία</span> μας
       </div>
       <div class="title is-2 has-text-centered">
-        <span class="has-text-danger">Αγία</span> Παρασκεύη
+      Ο Γαμπρός  και η <span class="has-text-danger">Νύφη</span>
       </div>
       <div class="columns is-multiline">
         <div class="column is-6">
@@ -22,17 +22,7 @@
               <img src="{{ slide.img }}" alt="" width="100%" />
             </div>
           </ngx-slick>
-        </div>
-        <div class="column is-12 has-text-centered">
-          <br />
-          <a
-            class="button is-danger"
-            href="{{ googlemapspath }}"
-            target="_blank"
-          >
-            Πλοήγηση σε Google Maps
-          </a>
-        </div>
+        </div>       
       </div>
     </div>
   </div>
