--- a/aphroditeweb/src/app/aboutus/aboutus.component.html
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.html
@@ -3,8 +3,8 @@
     <div class="container">
       <div class="columns is-multiline">
         <div class="column is-12">
-          <div class="has-text-centered title is-3">
-            <span class="has-text-danger">Ποιοι </span>είμαστε
+          <div class="has-text-centered title is-1">
+            <span class="has-text-danger">Ποιοι </span>Είμαστε
           </div>
           <br>
         </div>
@@ -53,7 +53,7 @@
               <div>
                 <div class="has-text-centered title is-5">Νάνσυ Ντάσιου</div>
                 <div class="has-text-centered subtitle is-6">
-                  Μεγάλωσε στα Ιωάννινα και για κακή της τύχη γνώρισε των κώστα...
+                  Κάποιες από τις σημαντικότερες στιγμες της ζωής της...
                 </div>
                 <hr />
                 <ul>
