--- a/aphroditeweb/src/app/home/home.component.html
+++ b/aphroditeweb/src/app/home/home.component.html
@@ -1,19 +1,16 @@
 <section class="hero is-large">
   <div class="overlay"></div>
-  <!-- <div class="hero-head">
-    <app-navbar></app-navbar>
-  </div> -->
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="columns is-centered is-multiline">
-        <div class="column is-12 is-size-2 has-text-white has-text-weight-bold">
+        <div class="column is-12 is-size-2 has-text-white ">
           <span class="">Παντρεύονται</span>
         </div>
-        <div class="column is-12 is-size-1 is-italic  has-text-white">
+        <div class="column is-12 is-size-1 is-italic  has-text-white has-text-weight-bold">
           <span class="">Κώστας</span> &
           <span class="has-text-danger">Νάνσυ</span>
         </div>
-        <div class="column is-12 is-size-3 has-text-white has-text-weight-bold">
+        <div class="column is-12 is-size-2 has-text-white ">
           <span class="">{{ targetDay | date: "dd-MM-yyyy" }}</span>
         </div>
       </div>
