--- a/aphroditeweb/src/app/location/location.component.html
+++ b/aphroditeweb/src/app/location/location.component.html
@@ -1,10 +1,10 @@
 <section class="hero is-medium">
   <div class="hero-body">
     <div class="container">
-      <div class="title is-2 is-marginless has-text-centered">
-       Η   <span class="has-text-danger">εκκλησία</span> μας
+      <div class="title is-1 is-marginless has-text-centered">
+       Η   <span class="has-text-danger">Εκκλησία</span> μας
       </div>
-      <div class="title is-2 has-text-centered">
+      <div class="title is-3 has-text-centered">
       Ο Γαμπρός  και η <span class="has-text-danger">Νύφη</span>
       </div>
       <div class="columns is-multiline">
