--- a/aphroditeweb/src/app/quote/quote.component.html
+++ b/aphroditeweb/src/app/quote/quote.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <div
-        class="subtitle is-4 is-italic is-size-6-mobile has-text-centered has-text-white"
+        class="subtitle is-size-4 is-italic is-size-6-mobile has-text-centered has-text-white"
       >
         Γάμος είναι η σχέση στην οποία ο ένας απο τους δύο έχει πάντα δίκιο και
         ο άλλος είναι ο άντρας
