--- a/aphroditeweb/src/app/theprogramm/theprogramm.component.html
+++ b/aphroditeweb/src/app/theprogramm/theprogramm.component.html
@@ -61,7 +61,8 @@
             <p class="heading">Ο Γαμος</p>
             <p>
               Το μεγάλο EVENT της ημέρας, και για να μην χαθείτε ορίστε και η
-              <a href="{{ churchPath }}" target="_blank">εκκλησία</a>
+              <a href="{{ churchPath }}" target="_blank">εκκλησία</a> - 
+              <a href="{{ ktimaPath }}" target="_blank">δεξίωση</a>
             </p>
           </div>
         </div>
