--- a/aphroditeweb/src/app/aboutus/aboutus.component.html
+++ b/aphroditeweb/src/app/aboutus/aboutus.component.html
@@ -4,7 +4,7 @@
       <div class="columns is-multiline">
         <div class="column is-12">
           <div class="has-text-centered title is-1">
-            <span class="has-text-danger">Ποιοι </span>Είμαστε
+            <span class="has-text-danger">Ποιοί </span>Είμαστε
           </div>
           <br>
         </div>
