--- a/aphroditeweb/src/app/invitation/invitation.component.html
+++ b/aphroditeweb/src/app/invitation/invitation.component.html
@@ -6,8 +6,8 @@
         " Κοινή μας απόφαση να μοιραστούμε τα όνειρα, τις ελπίδες, την ομορφιά
         της κάθε στιγμής, για πάντα μαζί... Δεχθείτε το κάλεσμά μας και ελάτε
         στο χαρούμενο ξεκίνημά μας Καλωσορίστε την πρεμιέρα της καινούριας μας
-        ζωής με την παρουσία σας. Το Σάββατο 13 Ιουλίου στις 18:00 στον Ιερό
-        Ναό Αγίας Παρασκευής "
+        ζωής με την παρουσία σας. Το Σάββατο 13 Ιουλίου στις 18:00 στο εξωκκλήσι
+        Αγίας Παρασκευής Πλαταριά"
       </p>
     </div>
   </div>
