--- a/aphroditeweb/src/app/theprogramm/theprogramm.component.html
+++ b/aphroditeweb/src/app/theprogramm/theprogramm.component.html
@@ -27,7 +27,7 @@
           <div class="timeline-content">
             <p class="heading">Το μεσημεριανό μας</p>
             <p>
-              Νηστικό αρκούδι δεν χορεύει και στον γάμο μας δεν θα κάθετε κανέις
+              Νηστικό αρκούδι δεν χορεύει και στον γάμο μας δεν θα κάθεται κανείς
               και για αυτό το
               <a href="{{ foodPath }}" target="_blank">φαγήτο</a> δεν θα το
               αφήσουμε στην τύχη.
